Fix for settings issue with Fleeting Luck (#644)
* Add scrollbar to fleeting luck dialog. Fix timing bug with fresh worlds showing fleeting luck.

* Add scrollbar to fleeting luck dialog. Fix timing bug with fresh worlds showing fleeting luck.

--- a/styles/dcc.scss
+++ b/styles/dcc.scss
@@ -1669,6 +1669,11 @@ a.inline-roll {
     }
   }
 
+  .fleeting-luck-users {
+    max-height: 400px;
+    overflow-y: auto;
+  }
+
   .fleeting-luck-row {
     align-items: center;
     display: grid;
